--- a/index.html
+++ b/index.html
@@ -19,7 +19,27 @@
 
 <body>
 
+  <div class="site-header-hero-wrapper">
 
+    <!-- SITE-HEADER -->
+    <header class="site-header">
+      <div class="site-header-container container">
+        <a class="site-header-logo-link" href="index.html">
+          <img class="site-header-logo-img" src="img/coffeeroasters-logo.svg" alt="Coffeeroasters logo" width="235" height="24">
+        </a>
+
+        <!-- SITENAV -->
+        <nav class="sitenav">
+          <ul class="sitenav-list">
+            <li class="sitenav-item"><a class="sitenav-item-link" href="index.html">Home</a></li>
+            <li class="sitenav-item"><a class="sitenav-item-link" href="index.html">About us</a></li>
+            <li class="sitenav-item"><a class="sitenav-item-link" href="index.html">Create your plan</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
+  </div>
 
   <script src="js/main.js"></script>
 </body>
