--- a/index.html
+++ b/index.html
@@ -39,6 +39,18 @@
       </div>
     </header>
 
+    <div class="hero">
+      <div class="hero-container container">
+        <div class="hero-info-wrapper">
+          <h1 class="hero-heading">Good coffee<br>is made simply.</h1>
+          <p class="hero-text">Start your mornings with the world’s best coffees. Try our expertly curated artisan coffees from our best roasters delivered directly to your door, at your schedule.</p>
+
+          <a class="button button-green" href="">Create your plan</a>
+
+        </div>
+        <img class="hero-img hero-img-index" src="img/hero-img.jpg" alt="men with coffee" srcset="img/hero-img.jpg 1x, img/hero-img@2x.jpg 2x" width="710" height="696">
+      </div>
+    </div>
   </div>
 
   <script src="js/main.js"></script>
