Add collection section

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 <body>
 
+  <!-- HEADER-HERO -->
   <div class="site-header-hero-wrapper">
 
     <!-- SITE-HEADER -->
@@ -53,6 +54,53 @@
     </div>
   </div>
 
+  <main class="main-content">
+
+    <!-- COLLECTION -->
+    <section class="index-collection">
+      <div class="container">
+        <div class="collection-inner">
+
+          <h2 class="collection-heading">Our collection</h2>
+          <ul class="collection-list">
+
+            <li class="collection-item">
+              <img class="collection-img" src="img/danche.png" alt="danche coffee" width="450" height="375" srcset="img/danche.png 1x, img/danche@2x.png 2x">
+              <div class="collection-info-wrapper">
+                <h3 class="collection-item-heading">Danche</h3>
+                <p class="collection-item-text">Ethiopian hand-harvested blend densely <br> packed with vibrant fruit notes.</p>
+              </div>
+            </li>
+
+            <li class="collection-item">
+              <div class="collection-info-wrapper">
+                <h3 class="collection-item-heading">Gran Espresso</h3>
+                <p class="collection-item-text">Light and flavorful blend with cocoa and <br> black pepper for an intense experience.</p>
+              </div>
+              <img class="collection-text-img" src="img/gran-espresso.png" alt="gran-espresso coffee" width="450" height="375" srcset="img/gran-espresso.png 1x, img/gran-espresso@2x.png 2x">
+            </li>
+
+            <li class="collection-item">
+              <img class="collection-img" src="img/picollo.png" alt="picollo coffee" width="450" height="375" srcset="img/picollo.png 1x, img/picollo@2x.png 2x">
+              <div class="collection-info-wrapper">
+                <h3 class="collection-item-heading">Piccollo</h3>
+                <p class="collection-item-text">Mild and smooth blend featuring notes <br> of toasted almond and dried cherry.</p>
+              </div>
+            </li>
+
+            <li class="collection-item">
+              <div class="collection-info-wrapper">
+                <h3 class="collection-item-heading">Planalto</h3>
+                <p class="collection-item-text">Brazilian dark roast with rich and velvety <br> body, and hints of fruits and nuts.</p>
+              </div>
+              <img class="collection-text-img" src="img/planalto.png" alt="Planalto coffee" width="450" height="375" srcset="img/planalto.png 1x, img/planalto@2x.png 2x">
+            </li>
+
+          </ul>
+        </div>
+      </div>
+    </section>
+  </main>
   <script src="js/main.js"></script>
 </body>
 </html>
