Add index-features section

--- a/index.html
+++ b/index.html
@@ -100,6 +100,35 @@
         </div>
       </div>
     </section>
+
+    <section class="index-features">
+      <div class="container">
+        <div class="index-features-inner">
+          <h2 class="index-features-heading">Why choose us?</h2>
+          <p class="index-features-lead">A large part of our role is choosing which particular coffees will be featured in our range. This means working closely with the best coffee growers to give you a more impactful experience on every level</p>
+          <ul class="index-features-list">
+            <li class="index-features-item">
+              <img class="index-features-img" src="img/man-with-coffee.jpg" alt="" width="433" height="500" srcset="img/man-with-coffee.jpg 1x, img/man-with-coffee@2x.jpg 2x">
+              <h3 class="index-features-item-title">Best quality</h3>
+              <p class="index-features-item-text">Discover an endless variety of the world’s best artisan coffee from each of our roasters.</p>
+            </li>
+
+            <li class="index-features-item">
+              <img class="index-features-img" src="img/coffee-in-kattle.jpg" alt="" width="433" height="500" srcset="img/coffee-in-kattle.jpg 1x, img/coffee-in-kattle@2x.jpg 2x">
+              <h3 class="index-features-item-title">Exclusive benefits</h3>
+              <p class="index-features-item-text">Special offers and swag when you subscribe, including 30% off your first shipment.</p>
+            </li>
+
+            <li class="index-features-item">
+              <img class="index-features-img" src="img/woman-with-coffee.jpg" alt="" width="433" height="500" srcset="img/woman-with-coffee.jpg 1x, img/woman-with-coffee@2x.jpg 2x">
+              <h3 class="index-features-item-title">Free shipping</h3>
+              <p class="index-features-item-text">We cover the cost and coffee is delivered fast. Peak freshness: guaranteed.</p>
+            </li>
+
+          </ul>
+        </div>
+      </div>
+    </section>
   </main>
   <script src="js/main.js"></script>
 </body>
