Fix index-features section

--- a/index.html
+++ b/index.html
@@ -129,6 +129,14 @@
         </div>
       </div>
     </section>
+
+<!--     <section class="index-h-i-w">
+      <div class="container">
+        <div class="index-h-i-w-inner">
+          <h2 class="index-h-i-w-heading">How it works</h2>
+        </div>
+      </div>
+    </section> -->
   </main>
   <script src="js/main.js"></script>
 </body>
