--- a/index.html
+++ b/index.html
@@ -165,6 +165,46 @@
       </div>
     </section>
   </main>
+
+  <!-- SITE FOOTER -->
+  <footer class="site-footer">
+    <div class="site-footer-container container">
+      <a class="site-footer-logo-link" href="index.html">
+        <img class="site-footer-logo-img" src="img/coffeeroasters-logo.svg" alt="Coffeeroasters logo" width="235" height="24">
+      </a>
+
+      <div class="sitenav sitenav-medium-font">
+        <ul class="sitenav-list">
+          <li class="sitenav-item"><a class="sitenav-item-link" href="index.html">Home</a></li>
+          <li class="sitenav-item"><a class="sitenav-item-link" href="index.html">About us</a></li>
+          <li class="sitenav-item"><a class="sitenav-item-link" href="index.html">Create your plan</a></li>
+        </ul>
+      </div>
+
+      <div class="site-footer-socials">
+        <ul class="socials">
+          <li class="socials-item">
+            <a class="socials-link" href="#" target="_blank">
+              <img class="socials-icon-img" src="img/facebook-icon.svg" alt="" width="30" height="30">
+            </a>
+          </li>
+
+          <li class="socials-item">
+            <a class="socials-link" href="#" target="_blank">
+              <img class="socials-icon-img" src="img/twitter-icon.svg" alt="" width="30" height="30">
+            </a>
+          </li>
+
+          <li class="socials-item">
+            <a class="socials-link" href="#" target="_blank">
+              <img class="socials-icon-img" src="img/instagram-icon.svg" alt="" width="30" height="30">
+            </a>
+          </li>
+
+        </ul>
+      </div>
+    </div>
+  </footer>
   <script src="js/main.js"></script>
 </body>
 </html>
