Add position styles and imgs

--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
           <a class="button button-green" href="">Create your plan</a>
 
         </div>
-        <img class="hero-img hero-img-index" src="img/hero-img.jpg" alt="men with coffee" srcset="img/hero-img.jpg 1x, img/hero-img@2x.jpg 2x" width="710" height="696">
+
+        <div class="hero-img-wrapper">
+          <img class="hero-img-badge" src="img/hero-badge.png" alt="" width="160" height="160" srcset="img/hero-badge.png 1x, img/hero-badge@2x.png 2x">
+          <img class="hero-img hero-img-index" src="img/hero-img.jpg" alt="men with coffee" srcset="img/hero-img.jpg 1x, img/hero-img@2x.jpg 2x" width="710" height="696">
+        </div>
       </div>
     </div>
   </div>
@@ -97,6 +101,10 @@
             </li>
 
           </ul>
+
+          <img class="index-collection-leaves-left" src="img/leaves-left.svg" alt="" width="231" height="371">
+          <img class="index-collection-leaves-right-mix" src="img/leaves-right-mix.svg" alt="" width="237" height="592">
+          <img class="index-collection-leaves-left-light" src="img/leaves-left-light.svg" alt="" width="131" height="287">
         </div>
       </div>
     </section>
@@ -127,6 +135,8 @@
             </li>
 
           </ul>
+
+          <img class="features-letter-coollection-img" src="img/letters-collection.png" alt="" width="140" height="144" srcset="img/letters-collection.png 1x, img/letters-collection@2x.png 2x">
         </div>
       </div>
     </section>
@@ -159,6 +169,8 @@
               </div>
             </li>
           </ol>
+
+          <img class="how-it-works-ball-img" src="img/coffee-first-sticker.png" alt="" width="222" height="187" srcset="img/coffee-first-sticker.png 1x, img/coffee-first-sticker@2x.png 2x">
 
           <a class="how-it-works-cta button button-orange" href="index.html">Create your plan</a>
         </div>
